--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "generate": "ts-node --transpile-only src/schema.ts"
   },
   "devDependencies": {
+    "prisma": "^4.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.8.0",
     "apollo-server": "^3.11.1",
     "graphql": "^16.6.0",
     "nexus": "^1.3.0"
