--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "generate": "ts-node --transpile-only src/schema.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.0",
     "prisma": "^4.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
@@ -17,7 +19,10 @@
   "dependencies": {
     "@prisma/client": "^4.8.0",
     "apollo-server": "^3.11.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "nexus": "^1.3.0"
   }
 }
