--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,5 @@
 {
-	"useTabs": true,
-	"tabWidth": 2,
-	"importOrderSeparation": true,
-	"importOrderGroupNamespaceSpecifiers": true
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "all"
 }
