--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-	"name": "hackernews-typescript",
-	"version": "1.0.0",
-	"private": true,
-	"repository": "https://github.com/halisyucel/hackernews-typescript.git",
-	"author": "halisyucel <isaycel2001@gmail.com>",
-	"license": "MIT",
-	"scripts": {
-		"dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
-		"generate": "ts-node --transpile-only src/schema.ts",
-		"lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
-		"lint": "tsc && yarn lint:eslint",
-		"format": "prettier --write 'src/**/*.{js,ts}' && yarn lint:eslint --fix",
-		"format:check": "prettier -c 'src/**/*.{js,ts}'"
-	},
-	"dependencies": {
-		"@prisma/client": "^4.8.0",
-		"apollo-server": "^3.11.1",
-		"bcryptjs": "^2.4.3",
-		"dotenv": "^16.0.3",
-		"graphql": "^16.6.0",
-		"jsonwebtoken": "^9.0.0",
-		"nexus": "^1.3.0"
-	},
-	"devDependencies": {
-		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
-		"@types/bcryptjs": "^2.4.2",
-		"@types/jsonwebtoken": "^9.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.48.0",
-		"@typescript-eslint/parser": "^5.48.0",
-		"eslint": "^8.31.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-import": "^2.26.0",
-		"prettier": "2.8.1",
-		"prisma": "^4.8.0",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.9.4"
-	}
+  "name": "hackernews-typescript",
+  "version": "1.0.0",
+  "private": true,
+  "repository": "https://github.com/halisyucel/hackernews-typescript.git",
+  "author": "halisyucel <isaycel2001@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
+    "generate": "ts-node --transpile-only src/schema.ts",
+    "format": "prettier --write 'src/**/*.ts' && yarn lint:eslint --fix",
+    "format:check": "prettier -c 'src/**/*.ts'",
+    "lint:tsc": "tsc --noEmit",
+    "lint:eslint": "eslint 'src/**/*.ts'",
+    "lint": "yarn lint:tsc && yarn lint:eslint"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.8.0",
+    "apollo-server": "^3.11.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
+    "nexus": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.1",
+    "prisma": "^4.8.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
+  }
 }
