--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@prisma/client": "^4.8.0",
     "apollo-server": "^3.11.1",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.3",
+    "dotenv-flow": "^3.2.0",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "nexus": "^1.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/jsonwebtoken": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
