--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "apollo-server": "^3.11.1",
     "bcryptjs": "^2.4.3",
     "dotenv-flow": "^3.2.0",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
-    "nexus": "^1.3.0"
+    "nexus": "^1.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
