--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "halisyucel <isaycel2001@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
+    "migrate": "prisma migrate dev --name",
+    "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/app.ts",
     "generate": "ts-node --transpile-only src/schema.ts",
     "format": "prettier --write 'src/**/*.ts' && yarn lint:eslint --fix",
     "format:check": "prettier -c 'src/**/*.ts'",
@@ -15,10 +16,10 @@
     "lint": "yarn lint:tsc && yarn lint:eslint"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.0",
-    "apollo-server": "^3.11.1",
+    "@apollo/server": "^4.3.0",
+    "@prisma/client": "^4.8.1",
     "bcryptjs": "^2.4.3",
-    "dotenv-flow": "^3.2.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
@@ -37,7 +38,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.1",
-    "prisma": "^4.8.0",
+    "prisma": "^4.8.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
