--- a/packages/apollo-client-frontend-sample/package.json
+++ b/packages/apollo-client-frontend-sample/package.json
@@ -4,23 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.7",
-    "@chakra-ui/react": "^2.4.9",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "framer-motion": "^9.0.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.0"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +36,10 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
-    "@graphql-codegen/client-preset": "^2.0.0"
+    "@graphql-codegen/client-preset": "^2.0.0",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "tailwindcss": "^3.2.6"
   }
 }
